# ironclaw

./: Cargo.toml  deny.toml
.github/workflows/: docker.yml  live-canary.yml  nextcloud-legacy-config-guard.yml  nightly-deep-ci.yml  nightly-e2e.yml  test.yml
channels-src/nextcloud-talk/: Cargo.toml  build.sh  nextcloud-talk.capabilities.json  nextcloud-talk.manifest.toml
channels-src/nextcloud-talk/src/: lib.rs
crates/ironclaw_agent_loop/src/: executor.rs
crates/ironclaw_architecture/tests/: reborn_dependency_boundaries.rs
crates/ironclaw_common/src/: event.rs
crates/ironclaw_extensions/src/: v2.rs
crates/ironclaw_host_runtime/: Cargo.toml
crates/ironclaw_product_workflow/: Cargo.toml
crates/ironclaw_reborn/: Cargo.toml
crates/ironclaw_reborn_composition/: Cargo.toml
crates/ironclaw_runner/: Cargo.toml
crates/ironclaw_turns/: Cargo.toml
crates/ironclaw_wasm_product_adapters/: Cargo.toml
deployment/: NEXTCLOUD_TALK_ROLLBACK_MATRIX.md
docker/reborn/: config.toml
docs/api/: responses.mdx
docs/channels/: nextcloud-talk-fake-user-contract.md  nextcloud-talk-fake-user-migration-adr.md
docs/plans/: 2026-07-19-governed-authoring-multiagent-nextcloud.md
docs/reborn/: agent-loop-skeleton.md
scripts/: focused-test.sh
src/agent/: dispatcher.rs  scheduler.rs  thread_ops.rs
src/bridge/: router.rs
src/channels/web/: mod.rs  (+1 more)
src/history/: store.rs
src/tools/: execute.rs
src/worker/: container.rs  job.rs
tests/: e2e_trace_memory_isolation.rs  responses_api_path_prefix.rs
tools-src/weather/: Cargo.toml  weather-tool.capabilities.json
(+215 files in other folders)
