[package]
name = "nextcloud_talk_channel"
version = "0.1.0"
edition = "2021"
description = "Nextcloud Talk webhook channel for IronClaw"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "0.36"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
url = "2"

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1

[workspace]
